# cuda-curve-search

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
cuda/: kernels.cu
src/: gpu.rs  main.rs  math.rs  search.rs  verify.rs
src/gpu/: context.rs  kernels.rs  pipeline.rs  workspace.rs
src/math/: cornacchia.rs  jacobi.rs  primality.rs  ranking.rs  sieve.rs  twist.rs  types.rs  u256.rs
