[package]
name = "cuda-curve-search"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
build = "build.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rug = { version = "1.28", default-features = false, features = ["integer"] }
gmp-mpfr-sys = { version = "1.6", default-features = false, features = ["use-system-libs"] }
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "cuda-version-from-build-system", "fallback-dynamic-loading"] }
lazy_static = "1.5"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
